# win-security-audit

./: .gitattributes  .gitignore  LICENSE  README.md  build.ps1  pyproject.toml  run_audit.cmd
.github/workflows/: build.yml
src/win_security_audit/: __init__.py  __main__.py  audit.py  cli.py  models.py  powershell.py  report.py  scoring.py  utils.py
src/win_security_audit/checks/: __init__.py  accounts.py  events.py  filesystem.py  network.py  persistence.py  runtime.py  security_controls.py  software.py  sysinternals.py  system.py
tests/: test_report.py  test_scoring.py  test_utils.py
tools/sysinternals/: README.md
